--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 	 
 	  
 	<!-- JSP 템플릿 엔진 -->
+	<!-- 내장톰캣사용 -->
 	<dependency>
 	  <groupId>org.apache.tomcat.embed</groupId>
 	  <artifactId>tomcat-embed-jasper</artifactId>
 	</dependency>
-	
 	
 	<!-- JSTL -->
 	<dependency>
